fixed grain being too grainy on mobile + adjusted style on tem header

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -62,6 +62,8 @@ $s-desk--massive: 18.19rem; /* 291.04px */
 // _________*MEDIA QUERIES*_________
 $screen-sm: 425px;
 
+$screen-smx: 550px;
+
 $screen-tb: 700px;
 
 $screen-lg: 1000px;
